<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_circles"
    tools:context=".Login">


    <TextView
        android:id="@+id/textLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/Login_title"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:fontFamily="@font/roboto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/Login_info"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLoginTitle" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textLayoutNationalId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"

        android:layout_marginTop="16dp"

        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="32dp"
        android:textColorHint="@color/colorPrimary"
        android:theme="@style/AppTheme"
        app:fontFamily="@font/roboto"
        app:layout_constraintBottom_toTopOf="@+id/textLayoutFirstName"
        app:layout_constraintEnd_toStartOf="@+id/button_nationalId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textnationalId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:enabled="false"
            android:hint="@string/nationalID"
            android:inputType="numberDecimal"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:theme="@style/AppTheme"
            app:fontFamily="@font/roboto" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textLayoutFirstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textColorHint="@color/colorPrimary"
        android:theme="@style/AppTheme"
        app:boxBackgroundColor="@color/colorPrimary"
        app:boxStrokeColor="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/button_firstName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLayoutNationalId">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/firstName"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:theme="@style/AppTheme" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/textLayoutLastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textColorHint="@color/colorPrimary"
        android:theme="@style/AppTheme"
        app:layout_constraintEnd_toStartOf="@+id/button_lastName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLayoutFirstName">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/lastName"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:theme="@style/AppTheme" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textLayoutBirthDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textColorHint="@color/colorPrimary"
        android:theme="@style/AppTheme"
        app:layout_constraintEnd_toStartOf="@+id/button_birthDate"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLayoutLastName">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textBirthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/birthDate"
            android:inputType="date"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:theme="@style/AppTheme" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_bg_rounded_corners"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/Login_title"
        android:textAllCaps="false"
        android:textColor="@color/purpleSolid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLayoutImage" />

    <Button
        android:id="@+id/button_edit_login"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_bg_rounded_corners"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/Login_edit_info"
        android:textAllCaps="false"
        android:textColor="@color/purpleSolid"
        app:layout_constraintStart_toEndOf="@+id/button_login"
        app:layout_constraintTop_toBottomOf="@+id/textLayoutImage" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_bg_rounded_corners"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/button_cancel"
        android:textAllCaps="false"
        android:textColor="@color/purpleSolid"
        app:layout_constraintStart_toEndOf="@+id/button_edit_login"
        app:layout_constraintTop_toBottomOf="@+id/textLayoutImage" />

    <Button
        android:id="@+id/button_nationalId"
        android:layout_width="72dp"
        android:layout_height="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_bg_rounded_corners_approved"
        android:text="@string/required"
        android:textAllCaps="false"
        android:textColor="@color/greenSolid"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/textLayoutFirstName"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_firstName"
        android:layout_width="72dp"
        android:layout_height="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_bg_rounded_corners_denied"
        android:text="@string/not_required"
        android:textAllCaps="false"
        android:textColor="@color/redSolid"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/textLayoutLastName"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_lastName"
        android:layout_width="72dp"
        android:layout_height="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_bg_rounded_corners_denied"
        android:text="@string/not_required"
        android:textAllCaps="false"
        android:textColor="@color/redSolid"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/textLayoutBirthDate"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_birthDate"
        android:layout_width="72dp"
        android:layout_height="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_bg_rounded_corners_denied"
        android:text="@string/not_required"
        android:textAllCaps="false"
        android:textColor="@color/redSolid"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/textLayoutImage"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_image"
        android:layout_width="72dp"
        android:layout_height="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_bg_rounded_corners_denied"
        android:text="@string/not_required"
        android:textAllCaps="false"
        android:textColor="@color/redSolid"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/button_cancel"
        app:layout_constraintEnd_toEndOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textLayoutImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textColorHint="@color/colorPrimary"
        android:theme="@style/AppTheme"
        app:layout_constraintEnd_toStartOf="@+id/button_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLayoutBirthDate">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/profile_image"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary" />
    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>